--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -14,4 +14,4 @@
 
 = link_to 'Edit Info', edit_movie_path(@movie)
 = link_to 'Back to movie list', movies_path
-= link_to 'Delete', movie_path(@movie)
+= link_to 'Delete', movie_path(@movie), :method => :delete
